<resources>
    <string name="app_name">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_btn_login">Login</string>
    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>
    <string name="str_welcome">Welcome User</string>
    <string name="btn_image">click to open Camera</string>
    <string name="str_name">ImplicitIntent</string>
    <string name="btn_web">Click to go google</string>


</resources>
