<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <EditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_username"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="261dp"
        android:hint="@string/hint_password"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/ed_username"
        app:layout_constraintVertical_bias="0.095"
        tools:layout_editor_absoluteX="16dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="2dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ed_password">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_male" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_female" />
    </RadioGroup>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/label_btn_login"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:layout_editor_absoluteX="43dp" />
    <Button
        android:id="@+id/btn_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_image"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@android:color/darker_gray" />
    <Button
        android:id="@+id/btn_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_web"/>


</androidx.appcompat.widget.LinearLayoutCompat>